--- a/values.d/pihole.yaml
+++ b/values.d/pihole.yaml
@@ -6,11 +6,11 @@ dnsHostPort:
   port: 53
 
 serviceDns:
-  type: ClusterIP
-  #loadBalancerIP: "192.168.1.15"
-  #annotations:
-   # # metallb.universe.tf/address-pool: network-services
-   # metallb.universe.tf/allow-shared-ip: pihole
+  type: LoadBalancer
+  loadBalancerIP: "192.168.1.15"
+  annotations:
+   # metallb.universe.tf/address-pool: network-services
+    metallb.universe.tf/allow-shared-ip: pihole
 
 serviceDhcp:
   enabled: false
@@ -107,43 +107,43 @@ dnsmasq:
   # staticDhcpEntries:
   # - dhcp-host=MAC_ADDRESS,IP_ADDRESS,HOSTNAME
 #
-#adlists:
-# - https://adaway.org/hosts.txt
-# - https://bitbucket.org/ethanr/dns-blacklists/raw/8575c9f96e5b4a1308f2f12394abd86d0927a4a0/bad_lists/Mandiant_APT1_Report_Appendix_D.txt
-# - https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-malware.txt
-# - https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt
-# - https://osint.digitalside.it/Threat-Intel/lists/latestdomains.txt
-# - https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&showintro=0&mimetype=plaintext
-# - https://phishing.army/download/phishing_army_blocklist_extended.txt
-# - https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt
-# - https://raw.githubusercontent.com/anudeepND/youtubeadsblacklist/master/domainlist.txt
-# - https://raw.githubusercontent.com/bigdargon/hostsVN/master/hosts
-# - https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt
-# - https://raw.githubusercontent.com/DandelionSprout/adfilt/master/Alternate%20versions%20Anti-Malware%20List/AntiMalwareHosts.txt
-# - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts
-# - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Risk/hosts
-# - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
-# - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/UncheckyAds/hosts
-# - https://raw.githubusercontent.com/Kees1958/W3C_annual_most_used_survey_blocklist/master/TOP_EU_US_Ads_Trackers_HOST
-# - https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt
-# - https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt
-# - https://s3.amazonaws.com/lists.disconnect.me/simple_ad.txt
-# - https://s3.amazonaws.com/lists.disconnect.me/simple_malvertising.txt
-# - https://urlhaus.abuse.ch/downloads/hostfile/
-# - https://v.firebog.net/hosts/AdguardDNS.txt
-# - https://v.firebog.net/hosts/Admiral.txt
-# - https://v.firebog.net/hosts/Airelle-hrsk.txt
-# - https://v.firebog.net/hosts/BillStearns.txt
-# - https://v.firebog.net/hosts/Easylist.txt
-# - https://v.firebog.net/hosts/Easyprivacy.txt
-# - https://v.firebog.net/hosts/Kowabit.txt
-# - https://v.firebog.net/hosts/Prigent-Ads.txt
-# - https://v.firebog.net/hosts/Prigent-Crypto.txt
-# - https://v.firebog.net/hosts/Shalla-mal.txt
-# - https://v.firebog.net/hosts/static/SamsungSmart.txt
-# - https://v.firebog.net/hosts/static/w3kbl.txt
-# - https://zerodot1.gitlab.io/CoinBlockerLists/hosts_browser
-#
+adlists:
+ - https://adaway.org/hosts.txt
+ - https://bitbucket.org/ethanr/dns-blacklists/raw/8575c9f96e5b4a1308f2f12394abd86d0927a4a0/bad_lists/Mandiant_APT1_Report_Appendix_D.txt
+ - https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-malware.txt
+ - https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt
+ - https://osint.digitalside.it/Threat-Intel/lists/latestdomains.txt
+ - https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&showintro=0&mimetype=plaintext
+ - https://phishing.army/download/phishing_army_blocklist_extended.txt
+ - https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt
+ - https://raw.githubusercontent.com/anudeepND/youtubeadsblacklist/master/domainlist.txt
+ - https://raw.githubusercontent.com/bigdargon/hostsVN/master/hosts
+ - https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt
+ - https://raw.githubusercontent.com/DandelionSprout/adfilt/master/Alternate%20versions%20Anti-Malware%20List/AntiMalwareHosts.txt
+ - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts
+ - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Risk/hosts
+ - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
+ - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/UncheckyAds/hosts
+ - https://raw.githubusercontent.com/Kees1958/W3C_annual_most_used_survey_blocklist/master/TOP_EU_US_Ads_Trackers_HOST
+ - https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt
+ - https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt
+ - https://s3.amazonaws.com/lists.disconnect.me/simple_ad.txt
+ - https://s3.amazonaws.com/lists.disconnect.me/simple_malvertising.txt
+ - https://urlhaus.abuse.ch/downloads/hostfile/
+ - https://v.firebog.net/hosts/AdguardDNS.txt
+ - https://v.firebog.net/hosts/Admiral.txt
+ - https://v.firebog.net/hosts/Airelle-hrsk.txt
+ - https://v.firebog.net/hosts/BillStearns.txt
+ - https://v.firebog.net/hosts/Easylist.txt
+ - https://v.firebog.net/hosts/Easyprivacy.txt
+ - https://v.firebog.net/hosts/Kowabit.txt
+ - https://v.firebog.net/hosts/Prigent-Ads.txt
+ - https://v.firebog.net/hosts/Prigent-Crypto.txt
+ - https://v.firebog.net/hosts/Shalla-mal.txt
+ - https://v.firebog.net/hosts/static/SamsungSmart.txt
+ - https://v.firebog.net/hosts/static/w3kbl.txt
+ - https://zerodot1.gitlab.io/CoinBlockerLists/hosts_browser
+
 whitelist: {}
   # If you want to provide whitelisted domains, add them here.
   # - clients4.google.com
@@ -163,7 +163,7 @@ ftl: {}
 webHttp: "80"
 webHttps: "443"
 hostNetwork: "false"
-privileged: "true"
+privileged: "false"
 
 monitoring:
   podMonitor:
