--- a/templates/local/vault_issuer_serviceaccount.yaml
+++ b/templates/local/vault_issuer_serviceaccount.yaml
@@ -11,6 +11,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: vault-issuer-token
+  namespace: cert-manager
   annotations:
     kubernetes.io/service-account.name: vault-issuer
 type: kubernetes.io/service-account-token
