--- a/values.d/deluge.yaml
+++ b/values.d/deluge.yaml
@@ -1,20 +1,21 @@
 ingress:
-  enabled: true
-  annotations:
-    cert-manager.io/cluster-issuer: "vault-issuer"
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/proxy-body-size: 50m
- 
-  hosts:
-    - host: torrent.dc
-      paths:
-        - path: /
-          pathType: Prefix
+  main:
+    enabled: true
+    annotations:
+      cert-manager.io/cluster-issuer: "vault-issuer"
+      kubernetes.io/ingress.class: "nginx"
+      nginx.ingress.kubernetes.io/proxy-body-size: 50m
 
-  tls:
-    - secretName: torrent.dc-tls
-      hosts:
-        - torrent.dc
+    hosts:
+      - host: torrent.dc
+        paths:
+          - path: /
+            pathType: Prefix
+
+    tls:
+      - secretName: torrent.dc-tls
+        hosts:
+          - torrent.dc
 
 env:
   PUID: 1000
