--- a/values.d/nextcloud.yaml
+++ b/values.d/nextcloud.yaml
@@ -1,5 +1,5 @@
 image:
-  tag: 19-fpm
+  tag: 21-fpm
 
 nextcloud:
   host: test.gnu.one
@@ -77,3 +77,10 @@ persistence:
 
 rbac:
   enabled: true
+
+readinessProbe:
+  initialDelaySeconds: 120
+livenessProbe:
+  initialDelaySeconds: 120
+startupProbe:
+  initialDelaySeconds: 120
