--- a/values.yaml
+++ b/values.yaml
@@ -306,6 +306,14 @@ apps:
         - password
         - smtp_username
         - smtp_password
+      - name: nextcloud-postgres
+        keys:
+          - postgresql-password
+          - postgresql-postgres-password
+      - name: nextcloud-db
+        keys:
+          - db-username
+          - db-password
 
   # Gitea
   - name: gitea
