Fix: NetPol allow-ingress

--- a/values.yaml
+++ b/values.yaml
@@ -52,8 +52,7 @@ networkpolicies:
     podSelector: {}
     policyTypes:
     - Ingress
-    ingress:
-    - {}
+    ingress: []
 
 
 # App Definitions that will be managed in ArgoCD
