--- a/values.yaml
+++ b/values.yaml
@@ -63,6 +63,7 @@ networkpolicies:
 
 # App Definitions that will be managed in ArgoCD
 apps:
+  ## Infrastructure / Code Apps
   # Heqet
   - name: heqet
     path: .
@@ -104,6 +105,7 @@ apps:
     targetRevision: 2.4.5
     syncWave: "0"
 
+  # Cert Manager Vault & ACME
   - name: cert-manager
     repoURL: https://charts.jetstack.io
     chart: cert-manager
@@ -181,6 +183,14 @@ apps:
         keys:
           - GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
 
+  ## Security
+  # Falco
+  - name: falco
+    repoURL: https://falcosecurity.github.io/charts
+    chart: falco
+    targetRevision: 1.15.7
+
+  ## Local Infrastructure Apps
   # PiHole
   - name: pihole
     repoURL: https://mojo2600.github.io/pihole-kubernetes
@@ -201,6 +211,92 @@ apps:
     repoURL: https://github.com/lib42/charts.git
     path: charts/borgserver
     targetRevision: dev
+
+  ## Local Apps
+  # Deluge & OpenVPN-Client
+  - name: deluge
+    repoURL: https://k8s-at-home.com/charts/
+    chart: deluge
+    targetRevision: 4.3.0
+    secrets:
+    - name: openvpn
+      keys:
+      - VPN_AUTH
+      - vpnConfigfile
+
+  # PyLoad Download Manager
+  - name: pyload
+    repoURL: https://k8s-at-home.com/charts/
+    chart: pyload
+    targetRevision: 4.4.1
+
+  # Folding @ Home
+  - name: folding
+    repoURL: https://github.com/Nold360/charts-2/
+    path: fahclient
+    targetRevision: f_ingress
+    parameters:
+      - name: fahClient.user
+        value: nold
+      - name: fahClient.team
+        value: "236833"
+      - name: ingress.hostname
+        value: folding.dc
+      - name: ingress.enabled
+        value: "true"
+      - name: ingress.tls
+        value: "true"
+      - name: resources.limits.cpu
+        value: "6"
+      - name: resources.limits.memory
+        value: 1Gi
+
+  ### Public Apps
+  # Nextcloud - duh
+  - name: nextcloud
+    repoURL: https://nextcloud.github.io/helm
+    chart: nextcloud
+    targetRevision: 2.6.5
+    networkpolicies:
+      - allow-dns
+      - allow-proxy
+      - allow-ingress
+    secrets:
+      - name: nextcloud-user
+        keys:
+        - username
+        - password
+        - smtp_username
+        - smtp_password
+      - name: nextcloud-postgres
+        keys:
+          - postgresql-username
+          - postgresql-password
+          - postgresql-postgres-password
+      - name: nextcloud-db
+        keys:
+          - db-username
+          - db-password
+
+  # Gitea
+  - name: gitea
+    repoURL: https://dl.gitea.io/charts/
+    chart: gitea
+    targetRevision: 4.0.1
+    networkpolicies:
+      - allow-dns
+      - allow-proxy
+      - allow-ingress
+    secrets:
+      - name: admin
+        keys:
+          - username
+          - password
+          - email
+      - name: postgres
+        keys:
+          - postgresql-password
+          - postgresql-postgres-password
 
   # Drone CI
   - name: drone
@@ -247,96 +343,3 @@ apps:
         value: "true"
       - name: env.DRONE_TRACE
         value: "true"
-
-  # Apps...
-  - name: folding
-    #repoURL: https://pcktdmp.github.io/charts
-    #chart: fahclient
-    #targetRevision: 2.5.5
-    repoURL: https://github.com/Nold360/charts-2/
-    path: fahclient
-    targetRevision: f_ingress
-    parameters:
-      - name: fahClient.user
-        value: nold
-      - name: fahClient.team
-        value: "236833"
-      - name: ingress.hostname
-        value: folding.dc
-      - name: ingress.enabled
-        value: "true"
-      - name: ingress.tls
-        value: "true"
-      - name: resources.limits.cpu
-        value: "6"
-      - name: resources.limits.memory
-        value: 1Gi
-
-  # Polaris - Scan cluster for stuff
-  - name: polaris
-    repoURL: https://charts.fairwinds.com/stable
-    chart: polaris
-    targetRevision: 3.1.1
-
-  # Deluge & OpenVPN-Client
-  - name: deluge
-    repoURL: https://k8s-at-home.com/charts/
-    chart: deluge
-    targetRevision: 4.3.0
-    secrets:
-    - name: openvpn
-      keys:
-      - VPN_AUTH
-      - vpnConfigfile
-
-  # PyLoad Download Manager
-  - name: pyload
-    repoURL: https://k8s-at-home.com/charts/
-    chart: pyload
-    targetRevision: 4.4.1
-
-  # Nextcloud - duh
-  - name: nextcloud
-    repoURL: https://nextcloud.github.io/helm
-    chart: nextcloud
-    targetRevision: 2.6.5
-    networkpolicies:
-      - allow-dns
-      - allow-proxy
-      - allow-ingress
-    secrets:
-      - name: nextcloud-user
-        keys:
-        - username
-        - password
-        - smtp_username
-        - smtp_password
-      - name: nextcloud-postgres
-        keys:
-          - postgresql-username
-          - postgresql-password
-          - postgresql-postgres-password
-      - name: nextcloud-db
-        keys:
-          - db-username
-          - db-password
-
-  # Gitea
-  - name: gitea
-    repoURL: https://dl.gitea.io/charts/
-    chart: gitea
-    targetRevision: 4.0.1
-    networkpolicies:
-      - allow-dns
-      - allow-proxy
-      - allow-ingress
-    secrets:
-      - name: admin
-        keys:
-          - username
-          - password
-          - email
-      - name: postgres
-        keys:
-          - postgresql-password
-          - postgresql-postgres-password
