--- a/values.d/deluge.yaml
+++ b/values.d/deluge.yaml
@@ -49,3 +49,12 @@ addons:
           - NET_ADMIN
           - SYS_MODULE
 
+    livenessProbe:
+      exec:
+        command:
+          - sh
+          - -c
+          - if [ $(curl -s https://ipinfo.io/country) == 'NL' ]; then exit 0; else exit $?; fi
+      initialDelaySeconds: 30
+      periodSeconds: 60
+      failureThreshold: 3
