„values.d/blocky.yaml“ ändern

--- a/values.d/blocky.yaml
+++ b/values.d/blocky.yaml
@@ -25,6 +25,7 @@ persistence:
     enabled: true
     mountPath: /logs
     accessMode: ReadWriteOnce
+    size: 1Gi
 
 prometheus:
   serviceMonitor:
