--- a/values.d/blocky.yaml
+++ b/values.d/blocky.yaml
@@ -26,6 +26,7 @@ persistence:
     mountPath: /logs
     accessMode: ReadWriteOnce
     size: 1Gi
+    storageClass: local-path
 
 prometheus:
   serviceMonitor:
