--- a/values.d/falco.yaml
+++ b/values.d/falco.yaml
@@ -2,14 +2,14 @@ docker:
   enabled: false
 
 podSecurityPolicy:
-  create: false
+  create: true
 
 falco:
   timeFormatISO8601: true
   grpc:
     enabled: true
   grpcOutput:
-    enabled: true
+    enabled: false
 
 falcosidekick:
   enabled: true
