Disabled: falco-exporter

--- a/values.d/blocky.yaml
+++ b/values.d/blocky.yaml
@@ -1,6 +1,9 @@
-
 env:
   TZ: Europe/Amsterdam
+
+podAnnotations:
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "4000"
 
 service:
   main:
