Fix Nextcloud Postgres

--- a/values.d/nextcloud.yaml
+++ b/values.d/nextcloud.yaml
@@ -103,6 +103,8 @@ postgresql:
   postgresqlDatabase: nextcloud
   postgresqlUsername: nextcloud
   existingSecret: nextcloud-postgres
+  persistence:
+    enabled: true
 
 redis:
   enabled: false
