--- a/values.d/pyload.yaml
+++ b/values.d/pyload.yaml
@@ -3,13 +3,11 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: "vault-issuer"
     kubernetes.io/ingress.class: "nginx"
- 
   hosts:
     - host: pyload.dc
       paths:
         - path: /
           pathType: Prefix
-
   tls:
     - secretName: pyload.dc-tls
       hosts:
@@ -23,6 +21,9 @@ persistance:
   config:
     enabled: true
     mountPath: /config
+    storageClass: local-path
+    accessMode: ReadWriteOnce
+    size: 1Gi
 
   # use hostpath instead
   downloads:
