Wiki: Use my fork & enable sideloading / offlineMode

--- a/values.d/wiki.yaml
+++ b/values.d/wiki.yaml
@@ -22,6 +22,14 @@ securityContext:
   runAsNonRoot: true
   runAsUser: 1000
 
+sideload:
+  enabled: true
+  env:
+    - name: HTTPS_PROXY
+      value: http://proxy-squid.proxy.svc.cluster.local:80
+
+offlineMode: true
+
 ingress:
   enabled: true
   annotations:
