--- a/values.d/pyload.yaml
+++ b/values.d/pyload.yaml
@@ -1,17 +1,18 @@
 ingress:
-  enabled: true
-  annotations:
-    cert-manager.io/cluster-issuer: "vault-issuer"
-    kubernetes.io/ingress.class: "nginx"
-  hosts:
-    - host: pyload.dc
-      paths:
-        - path: /
-          pathType: Prefix
-  tls:
-    - secretName: pyload.dc-tls
-      hosts:
-        - pyload.dc
+  main:
+    enabled: true
+    annotations:
+      cert-manager.io/cluster-issuer: "vault-issuer"
+      kubernetes.io/ingress.class: "nginx"
+    hosts:
+      - host: pyload.dc
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: pyload.dc-tls
+        hosts:
+          - pyload.dc
 
 env:
   PUID: 1000
