Update: Ingress config

--- a/values.d/ingress-external.yaml
+++ b/values.d/ingress-external.yaml
@@ -1,5 +1,9 @@
 controller:
   name: controller-external
+  ingressClassResource:
+    name: external
+    enabled: true
+
   ingressClass: external
   kind: DaemonSet
   service:
