--- a/values.d/ingress-external.yaml
+++ b/values.d/ingress-external.yaml
@@ -1,11 +1,18 @@
 controller:
-  name: controller-external
+  name: external
   ingressClassResource:
     name: external
     enabled: true
+    controllerValue: 'k8s.io/external'
+  extraArgs:
+    ingress-class: external
 
-  ingressClass: external
   kind: DaemonSet
+  updateStrategy:
+  #  rollingUpdate:
+  #    maxUnavailable: 1
+    type: RollingUpdate
+
   service:
     annotations:
       metallb.universe.tf/address-pool: external
