--- a/values.d/prometheus.yaml
+++ b/values.d/prometheus.yaml
@@ -1,16 +1,8 @@
-#image:
-#  tag: 2.29.1
-
-rbac:
-  create: true
-
 podSecurityPolicy:
   enabled: true
 
 kubeStateMetrics:
   enabled: false
-
-# kube-state-metrics:
 
 nodeExporter:
   enabled: true
@@ -18,17 +10,6 @@ nodeExporter:
   hostPID: true
   hostRootfs: true
   
-  podSecurityPolicy:
-    annotations: {}
-      ## Specify pod annotations
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#sysctl
-      ##
-      # seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
-      # seccomp.security.alpha.kubernetes.io/defaultProfileName: 'docker/default'
-      # apparmor.security.beta.kubernetes.io/defaultProfileName: 'runtime/default'
-
   extraHostPathMounts:
     - name: textfile-dir
       mountPath: /srv/txt_collector
@@ -38,71 +19,12 @@ nodeExporter:
 
 server:
   enabled: true
-  baseURL: ""
-
-  remoteWrite: []
-  ## https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_read
-  ##
-  remoteRead: []
-
-  ingress:
-    enabled: false
-    annotations: {}
-    #   kubernetes.io/ingress.class: nginx
-    #   kubernetes.io/tls-acme: 'true'
-    
-    hosts: []
-    #   - prometheus.domain.com
-    #   - domain.com/prometheus
-
-    tls: []
-    #   - secretName: prometheus-server-tls
-    #     hosts:
-    #       - prometheus.domain.com
-
 
   persistentVolume:
     enabled: true
-    size: 8Gi
-  
-  podSecurityPolicy:
-    annotations: {}
-      ## Specify pod annotations
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#sysctl
-      ##
-      # seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
-      # seccomp.security.alpha.kubernetes.io/defaultProfileName: 'docker/default'
-      # apparmor.security.beta.kubernetes.io/defaultProfileName: 'runtime/default'
 
 pushgateway:
   enabled: true
-  ingress:
-    enabled: false
-    annotations: {}
-    #   kubernetes.io/ingress.class: nginx
-    #   kubernetes.io/tls-acme: 'true'
-
-    hosts: []
-    #   - pushgateway.domain.com
-    #   - domain.com/pushgateway
-
-    tls: []
-    #   - secretName: prometheus-alerts-tls
-    #     hosts:
-    #       - pushgateway.domain.com
-
-  podSecurityPolicy:
-    annotations: {}
-      ## Specify pod annotations
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#apparmor
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#seccomp
-      ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/#sysctl
-      ##
-      # seccomp.security.alpha.kubernetes.io/allowedProfileNames: '*'
-      # seccomp.security.alpha.kubernetes.io/defaultProfileName: 'docker/default'
-      # apparmor.security.beta.kubernetes.io/defaultProfileName: 'runtime/default'
 
 extraScrapeConfigs: |
  - job_name: 'openwrt'
@@ -113,21 +35,10 @@ extraScrapeConfigs: |
    scrape_interval: 120s
    static_configs:
     - targets: ['192.168.1.111:9942']
- - job_name: 'octoprint'
-    scrape_interval: 5s
-    metrics_path: '/plugin/prometheus_exporter/metrics'
-    params:
-      apikey: ['__OCTOPRINT_APIKEY__']
-    static_configs:
-      - targets: ['octoprint:80']
-
-# Adds option to add alert_relabel_configs to avoid duplicate alerts in alertmanager
-# useful in H/A prometheus with different external labels but the same alerts
-
-networkPolicy:
-  ## Enable creation of NetworkPolicy resources.
-  ##
-  enabled: false
-
-# Force namespace of namespaced resources
-forceNamespace: null
+# - job_name: 'octoprint'
+#    scrape_interval: 5s
+#    metrics_path: '/plugin/prometheus_exporter/metrics'
+#    params:
+#      apikey: ['__OCTOPRINT_APIKEY__']
+#    static_configs:
+#      - targets: ['octoprint:80']
